@@ -183,6 +183,7 @@ This change makes the editing context the single source of truth for the state o
 image:doc/screenshots/biggerResizeHandles2.png[Compartment with header without separator,70%]
 - https://github.com/eclipse-sirius/sirius-web/issues/2948[#2948] [portal] Use a "close" icon instead of "delete" icon for the button that removes a representation from a portal (but does not delete the representation).
 - https://github.com/eclipse-sirius/sirius-web/issues/2792[#2792] [diagram] Add support to label and call layout after arrangeAll.
+- https://github.com/eclipse-sirius/sirius-web/issues/2951[#2951] [diagram] Set ConnectionLine color to theme.palette.selected.
 
 == v2023.12.0
 
